# CialloClaw

./: -第一阶段功能文档.md  .gitignore  CialloClaw 产品定义 1.0.md  CialloClaw 产品定义 1.5.md  CialloClaw_PRD.md  CialloClaw_架构设计文档_修订版_v4.md  README.md  SPEC_LOCK.md  app.go  app.js  app.py  claw.html  config.example.json  dashboard.html  desktop-shell.js  floating-launcher-lifecycle.js  floating.css  floating.html  floating.js  go.mod  go.sum  index.html  launcher.go  logic.js  main-controller.js  main.go  main.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  preload.js  product_document.md  run.bat  skills-lock.json  start.bat  start.ps1  style.css  styles.css  tsconfig.json  (+2 more)
.playwright-mcp/: page-2026-05-11T00-55-03-076Z.yml  page-2026-05-11T02-03-04-671Z.yml  page-2026-05-11T03-47-07-073Z.yml  page-2026-05-11T03-47-40-083Z.yml  page-2026-05-11T05-19-13-815Z.yml  page-2026-05-11T07-58-34-282Z.yml  page-2026-05-11T09-29-03-721Z.yml  page-2026-05-11T09-29-30-091Z.yml  page-2026-05-11T10-03-49-598Z.yml  page-2026-05-11T10-31-56-460Z.yml  page-2026-05-11T10-32-22-333Z.yml  page-2026-05-11T11-28-44-894Z.yml  page-2026-05-11T11-28-56-175Z.yml  page-2026-05-11T12-24-39-839Z.yml  page-2026-05-11T12-24-52-144Z.yml  page-2026-05-11T12-25-31-265Z.yml
backend/: go.mod  main.go
cialloclaw-architecture/: 00-总览与开发路线.md  01-核心状态模型与状态机.md  02-事件总线与内部接口协议.md  03-扩展开发指南.md  04-事件字典.md  05-模块职责与依赖边界.md  06-Repository与持久化设计.md  07-启动与运行时装配.md  08-扩展接口规范.md  09-错误处理与恢复策略.md  README.md
docs/: architecture-overview.md  atomic-features.md  control-panel-settings.md  dashboard-design.md  user-guide.md  (+12 more)
frontend/: CMakeLists.txt  app.js  build.mjs  data.js  index.html  main.cpp  package-lock.json  package.json  package.json.md5  router.js  style.css  styles.css  utils.js
frontend/assets/: README.md
frontend/qml/: Main.qml
frontend/qml/components/: AppWindow.qml  AuthorizationDepthSlider.qml  DesktopSceneArea.qml  MemoryHintBlock.qml  SceneSwitcher.qml  SituationOverlay.qml  StormPreviewOverlay.qml  TaskPressureView.qml  WeatherBand.qml
frontend/qml/scenes/: ContractScene.qml  DailyScene.qml  DebugScene.qml  ReadingScene.qml  ResourceScene.qml
frontend/src/: backendclient.cpp  backendclient.h
frontend/views/: advance.js  desktop.js  devPanel.js  intentPanel.js  memory.js  resultPopup.js  tasks.js  understand.js  workbench.js  workspace.js
frontend/views/panels/: settings.js  todos.js
frontend/wailsjs/go/main/: App.d.ts
qt-app/: CMakeLists.txt  README.md
qt-app/src/: ChatWindow.cpp  ChatWindow.h  PetWindow.cpp  PetWindow.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+744 files in other folders)
