[package]
name = "cialloclaw"
version = "0.0.0"
edition = "2021"
description = "CialloClaw 桌面原型机"
repository = ""
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
